test : testing endpoits from postman and resolved query error Co-authored : ChatGPT